--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <title>Foodism</title>
+  </head>
+  <body>
+    
+    
+  <nav>
+    <ul class="nav-flex-row">
+      <li class="nav-item">
+        <a href="#about">Sobre nosotros</a>
+      </li>
+      <li class="nav-item">
+        <a href="#reservation">Reserva</a>
+      </li>
+      <li class="nav-item">
+        <a href="#menu">Menu</a>
+      </li>
+      <li class="nav-item">
+        <a href="#shop">Tienda</a>
+      </li>
+    </ul>
+  </nav>
+
+  <section class="section-intro">
+    <header>
+      <h1>Foodism</h1>
+    </header>
+    <div class="link-to-book-wrapper">
+      <a class="link-to-book" href="#reservations">Reserve una mesa</a>
+    </div>
+  </section>
+
+  <section class="about-section">
+    <article>
+      <h3>
+          Nuestro restaurant es el mejor porque Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+      </h3>
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        A quos, voluptatum illum mollitia dolores libero placeat 
+        nesciunt quasi adipisci impedit!Lorem ipsum dolor sit, 
+        amet consectetur adipisicing elit. 
+        A quos, voluptatum illum mollitia dolores libero placeat 
+        nesciunt quasi adipisci impedit!
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        A quos, voluptatum illum mollitia dolores libero placeat 
+        nesciunt quasi adipisci impedit!Lorem ipsum dolor sit.
+      </p>
+    </article>
+  </section>
+
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="img/rachel-park-hrlvr2ZlUNk-unsplash.jpg" class="d-block w-100" alt="food">
+      </div>
+      <div class="carousel-item">
+        <img src="img/lily-banse--YHSwy6uqvk-unsplash.jpg" class="d-block w-100" alt="food">
+      </div>
+      <div class="carousel-item">
+        <img src="img/brooke-lark-aGjP08-HbYY-unsplash.jpg" class="d-block w-100" alt="food">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Anterior</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Siguiente</span>
+    </a>
+  </div>
+
+  <div class="container">
+    <div class="row-flex">
+      <div class="flex-column-form">
+        <h3>
+          Haz una reserva
+        </h3>
+      <form class="media-centered">
+          <div class="form-group">
+            <p>
+              Deje su numero, le llamaremos para la reserva
+            </p>
+            <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="Ingresa tu nombre">
+          </div>
+          <div class="form-group">
+            <input type="number" class="form-control" id="exampleInputphoneNumber1" placeholder="Ingresa tu numero celular">
+          </div>
+          <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
+      </div>
+      <div class="opening-time">
+        <h3>
+          Horario
+        </h3>
+        <p>
+         <span>Lunes—Jueves: 08:00 — 21:00</span> 
+         <span>Viernes—Sabado: 09:00 — 22:00 </span>
+         <span>Domingo: 10:00 — 15:00</span>
+        </p>
+      </div>
+      <div class="contact-adress">
+        <h3>
+          Contacto
+        </h3>
+        <p>
+          <span>310 123 4567</span>
+          <span>Urb Anita, donde Lorem</span>
+          <span>Bolivar, Cartagena</span>
+        </p>
+      </div>
+    </div>
+    </div>
+
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+ 
+  </body>
+  
+</html> 
